--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header id="cabecera">
 		<div class="container">
-			<h1>Las mejores apps en Android</h1>
+			<h1 class="titulo-principal">Las mejores apps en Android</h1>
 			<button class="boton boton-large">Comienza ya</button>
 		</div>
 	</header>
