--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 	<meta charset="UTF-8">
 	<title>Las mejores apps para Android</title>
 	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/estilos.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<header id="cabecera">
 		<div class="container">
-			<h1 class="titulo-principal">Las mejores apps en Android</h1>
+			<h1 class="titulo-principal">
+				<span class="titulo-principal-delgado">Las mejores</span>
+				<span class="titulo-principal-grueso">apps en Android</span>
+			</h1>
 			<button class="boton boton-large">Comienza ya</button>
 		</div>
 	</header>
@@ -24,19 +29,28 @@
 					<div class="circulo">1</div>
 					<img src="" alt="">
 					<h3>Telegram</h3>
-					<button class="boton boton-small">Descargar</button>
+					<button class="boton boton-small">
+						<span class="icon-descarga"></span>
+						Descargar
+					</button>
 				</li>
 				<li>
 					<div class="circulo">2</div>
 					<img src="" alt="">
 					<h3>Todoist</h3>
-					<button class="boton boton-small">Descargar</button>
+					<button class="boton boton-small">
+						<span class="icon-descarga"></span>
+						Descargar
+					</button>
 				</li>
 				<li>
 					<div class="circulo">3</div>
 					<img src="" alt="">
 					<h3>Two Dots</h3>
-					<button class="boton boton-small">Descargar</button>
+					<button class="boton boton-small">
+						<span class="icon-descarga"></span>
+						Descargar
+					</button>
 				</li>
 			</ul>
 		</div>
