--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/estilos.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 </head>
 <body>
 	<header id="cabecera">
@@ -21,33 +22,36 @@
 
 	<section id="ranking">
 		<div class="container">
-			<h2>Las tres mejores aplicaciones en Android del 2014</h2>
-			<p>Este ranking esta basado en la cantidad de descargas, visitas calificación, usabilidad  y búsquedas.</p>
 
-			<ul>
-				<li>
+			<div class="ranking-titulo">
+				<h2 class="ranking-titulo-h2">Las tres mejores aplicaciones en Android del 2014</h2>
+				<p class="ranking-descripcion">Este ranking esta basado en la cantidad de descargas, visitas calificación, usabilidad  y búsquedas.</p>
+			</div>
+
+			<ul class="ranking-lista">
+				<li class="ranking-item">
 					<div class="circulo">1</div>
-					<img src="" alt="">
-					<h3>Telegram</h3>
-					<button class="boton boton-small">
+					<img src="img/telegram.png" alt="">
+					<h3 class="ranking-titulo-app">Telegram</h3>
+					<button class="boton boton-small ranking-descargar">
 						<span class="icon-descarga"></span>
 						Descargar
 					</button>
 				</li>
-				<li>
+				<li class="ranking-item">
 					<div class="circulo">2</div>
-					<img src="" alt="">
-					<h3>Todoist</h3>
-					<button class="boton boton-small">
+					<img src="img/todoist.png" alt="">
+					<h3 class="ranking-titulo-app">Todoist</h3>
+					<button class="boton boton-small ranking-descargar">
 						<span class="icon-descarga"></span>
 						Descargar
 					</button>
 				</li>
-				<li>
+				<li class="ranking-item">
 					<div class="circulo">3</div>
-					<img src="" alt="">
-					<h3>Two Dots</h3>
-					<button class="boton boton-small">
+					<img src="img/twodots.png" alt="">
+					<h3 class="ranking-titulo-app">Two Dots</h3>
+					<button class="boton boton-small ranking-descargar">
 						<span class="icon-descarga"></span>
 						Descargar
 					</button>
